--- a/MainForm.resx
+++ b/MainForm.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAgBAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAACgcGAZiTlEysqalhq6SmXq2qq16vrK1er6ysXq2pq16rp6derKipYZmWllY7PDwGAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAfExACdnJzaIyJie2Zlpb0np2d9KSio/Slo6P0n52e9JmXmPSOjIzxd3R0fE9L
+        SgYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/hoUHpqam2bi2tv+7ubn/wb+//8LAwP+8urr/uLa2/6qp
+        qeyMjo4TAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACIhoanl5WV/5aUlP+amJj/m5mZ/5eV
+        lf+WlZX/ioiIzQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKyr
+        qyK3trZXvLq7XLu6u1u8urtbvLu8W7u7vFu8u7xburm7W7e4uFu2trZbtra2WpqYmb+hn5//oZ+f/6Kg
+        oP+gnp//npyc/5yam/+SkJDVoqGiXp+en1uZmZlblpWVW4+QkFuKiopbhoaFW4GCgVt8e3tbeHd3W3Bt
+        bV5mZWUut7W1X7ixsfa7sK7/ua6t/7qvrv+8sLD/vbGw/76zsv+/s7L/vrOy/72ysf+8sLD/uq+u/7uv
+        r/+5raz/tqqp/7ClpP+uo6L/rqKh/6qenf6onZz/pJqX/6GXk/+ek5H/mo+N/5WKiP+RhoT/jIKA/4h9
+        e/+DeHb/gnp4/3Rwb4zFwcFeXlta9Q8NDP8ODAz/DgwM/w8MDP8PDQz/Dw0M/w8NDP8PDQz/DwwM/w4M
+        DP8ODAz/DgwL/w4MC/8ODAv/DgsL/w0LC/8NCwv/DQsL/w0LC/8NCwv/DQsL/w0LCv8NCwr/DAoK/wwK
+        Cf8MCgn/DAoJ/wsJCf9IREP/fnd3jcC8vF5SUFD0AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/0A9Pf99dXeMubW1XlFOUPQAAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AQEB/wgICP8JCQn/CAgI/wgICP8ICAj/CAgI/wgI
+        CP8ICAj/CAgI/wkJCf8GBgb/AAAA/wAAAP8AAAD/QT4+/313d4y1sLNeT0xO9AAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8VFRX/wsLC/9bW1v/V1dX/1dXV/9XV
+        1f/V1dX/1dXV/9XV1f/V1dX/19fX/5+fn/8EBAT/AAAA/wAAAP9CPz//fnl4jLCsrl5NSkv0AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/xMTE/+srKz/vr6+/729
+        vf+9vb3/vb29/729vf+9vb3/vb29/729vf++vr7/jo6O/wQEBP8AAAD/AAAA/0VBQP+AfHqMr6yrXkxK
+        SfQAAAD/AAAA/wcHB/8tLS3/BQUF/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wIC
+        Av8DAwP/AwMD/wMDA/8DAwP/AwMD/wMDA/8DAwP/AwMD/wMDA/8CAgL/AAAA/wAAAP8AAAD/R0NC/4WA
+        foyvq6teTElJ9AAAAP8AAAD/ERER/9jY2P+9vb3/Xl5e/xQUFP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP9IREP/iYKCjLCrrF5MSUr0AAAA/wAAAP8KCgr/wcHB////////////29vb/4eHh/8wMDD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/0pHRf+OiYaMsqytXk1LSvQAAAD/AAAA/wAAAP8TExP/W1tb/7e3t//6+vr///////X1
+        9f+urq7/UVFR/w4ODv8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/S0lI/5ONioy0r69eTktL9AAAAP8AAAD/AAAA/wAAAP8AAAD/AgIC/zc3
+        N/+Pj4//3d3d////////////z8/P/11dXf8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP9PTEv/mZORjLeysl5PTUz0AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP87Ozv/z8/P////////////tLS0/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/1NPTv+emJaMurS1XlBPTfQAAAD/AAAA/wAA
+        AP8AAAD/AAAA/wkJCf9HR0f/oaGh/+rq6v//////9/f3/7m5uf9KSkr/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/VVJQ/6OdnIy6tLVeUE9O9AAA
+        AP8AAAD/AAAA/x8fH/9vb2//yMjI////////////5ubm/5WVlf87Ozv/AwMD/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP9YVFX/qqOijL+6
+        u15TUVH0AAAA/wAAAP8NDQ3/zs7O////////////yMjI/2xsbP8dHR3/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/1tX
+        WP+wqKaMxcLBXlVUU/QAAAD/AAAA/xMTE//Pz8//qamp/0hISP8JCQn/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/Xlta/7WwrYzJxsZeV1ZV9AAAAP8AAAD/BgYG/x8fH/8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP9hXl7/vLe0jM7Ly15YV1b0AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/2FgX//BuriM1M/RXmViYvUPDg//Dw8P/w8PD/8QDw//EA8P/xAP
+        D/8QEBD/EBAQ/xAQEP8QEBD/EBAQ/xAQEP8QEBD/EBAQ/xAQEP8QEBD/EBAQ/xAQEP8QEBD/EBAQ/xAQ
+        EP8QDw//EA8P/xAPD/8PDw//Dw8P/w8PD/8PDg7/b2xr/8S/v43JxsZaycTF6MfCwvTJw8Tzy8bH887I
+        yfPPysvzz8zM88/OzvPQzs7z0M7O89HPz/PS0NDz0tDQ89PR0fPT0dHz0tDQ89LQ0PPS0NDz0tDQ89HP
+        z/PS0NDz0M7O88/OzvPQzM3z0MrL883JyvPKycnzy8fH88jExfPQzMz4xcDAhQAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/////////////////8AD///AA///4Af///AP/wAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAP////////////////////8=
+</value>
+  </data>
 </root>
